feat 更新(config):数据库配置和用户实体
- 将数据库密码默认值从占位符改为具体值
- 修改JPA.hibernate.ddl-auto为update模式
- 调整User字段类型实体的user_id为String并设置长度限制

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -10,12 +10,12 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/clouddisk
     username: root
-    password: ${DB_PASSWORD:your_password_here}
+    password: ${DB_PASSWORD:123456}
     driver-class-name: org.postgresql.Driver
 
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
     show-sql: false
     properties:
       hibernate:
