--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
 
   datasource:
     url: jdbc:postgresql://localhost:5432/clouddisk
-    username: root
+    username: clouddisk
     password: ${DB_PASSWORD:123456}
     driver-class-name: org.postgresql.Driver
 
