--- a/server/pom.xml
+++ b/server/pom.xml
@@ -61,6 +61,11 @@
             <artifactId>postgresql</artifactId>
             <version>${postgresql.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
 
         <!-- AWS SDK -->
         <dependency>
