security(config): restrict H2 console to dev profile and localhost; explicitly disable in prod; clarify profile setup

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -9,6 +9,11 @@ spring:
     name: clouddisk-server
   profiles:
     active: dev
+    group:
+      dev:
+        - application-dev.yml
+      prod:
+        - application-prod.yml
 
   servlet:
     multipart:
