--- a/server/src/main/resources/application-dev.yml
+++ b/server/src/main/resources/application-dev.yml
@@ -13,9 +13,15 @@ spring:
         dialect: org.hibernate.dialect.H2Dialect
         format_sql: true
 
-# H2 控制台
+# H2 控制台（仅开发环境启用，限制本机访问）
 spring:
   h2:
     console:
       enabled: true
       path: /h2-console
+  web:
+    resources:
+      static-locations: classpath:/static/
+
+server:
+  address: 127.0.0.1
