--- a/client/src/main/resources/application.yml
+++ b/client/src/main/resources/application.yml
@@ -1,7 +1,11 @@
 client:
-  server-url: ${CLIENT_SERVER_URL:http://localhost:8080}
+  server-url: http://ec2-54-95-61-230.ap-northeast-1.compute.amazonaws.com:8080
   sync-dir: ${CLIENT_SYNC_DIR:./local}
   compress-strategy: ${CLIENT_COMPRESS_STRATEGY:zip}
   enable-auto-sync: ${CLIENT_ENABLE_AUTO_SYNC:true}
   email: ${CLIENT_EMAIL:}
   password: ${CLIENT_PASSWORD:}
+
+spring:
+  main:
+    allow-bean-definition-overriding: true
