--- a/server/pom.xml
+++ b/server/pom.xml
@@ -22,6 +22,7 @@
         <postgresql.version>42.7.1</postgresql.version>
         <aws-sdk.version>2.21.29</aws-sdk.version>
         <jwt.version>0.12.3</jwt.version>
+        <logback.version>1.5.6</logback.version>
     </properties>
 
     <dependencyManagement>
@@ -41,6 +42,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
