feat(s3): 实现客户端直接上传文件到S3的功能
添加S3Service支持客户端直接上传文件到AWS S3，包括单次上传和分片上传
配置S3客户端参数，支持自定义endpoint和path-style访问
优化上传失败处理，增加重试机制和回退到API上传的逻辑

--- a/client/pom.xml
+++ b/client/pom.xml
@@ -106,6 +106,27 @@
             <version>5.10.0</version>
             <scope>test</scope>
         </dependency>
+        
+        <!-- AWS SDK for S3 -->
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3</artifactId>
+            <version>2.20.26</version>
+        </dependency>
+
+        <!-- AWS SDK Apache HTTP Client -->
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>apache-client</artifactId>
+            <version>2.20.26</version>
+        </dependency>
+        
+        <!-- AWS SDK for STS (用于身份认证) -->
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>sts</artifactId>
+            <version>2.20.26</version>
+        </dependency>
     </dependencies>
 
     <build>
