--- a/client/src/main/resources/application.yml
+++ b/client/src/main/resources/application.yml
@@ -8,17 +8,13 @@ client:
   email: ${CLIENT_EMAIL:} # 改成自己的
   password: ${CLIENT_PASSWORD:} # 改成自己的
   
-  # S3 相关配置
-  s3Bucket: ${AWS_S3_BUCKET:clouddisk-bucket}
-  s3Region: ${AWS_REGION:us-east-1}
-  s3Endpoint: ${AWS_S3_ENDPOINT:}
-  s3PathStyle: ${AWS_S3_PATH_STYLE:false}
-  s3PartSizeMb: ${AWS_S3_MULTIPART_PART_SIZE_MB:8}
-  s3MaxRetries: ${AWS_S3_MULTIPART_MAX_RETRIES:3}
-  # S3 凭据（可选，优先使用此配置；未配置则读取系统/环境默认凭据）
-  s3AccessKeyId: ${AWS_ACCESS_KEY_ID:}
-  s3SecretAccessKey: ${AWS_SECRET_ACCESS_KEY:}
-  s3SessionToken: ${AWS_SESSION_TOKEN:}
+  # S3 配置
+  s3Bucket: ${S3_BUCKET:clouddisk}
+  s3Region: ${S3_REGION:us-east-1}
+  s3Endpoint: ${S3_ENDPOINT:http://localhost:9000}
+  s3PathStyle: ${S3_PATH_STYLE:true}
+  s3PartSizeMb: ${S3_PART_SIZE_MB:5}
+  s3MaxRetries: ${S3_MAX_RETRIES:3}
   
   # HTTP 客户端配置（S3 SDK 使用）
   httpMaxConnections: ${AWS_HTTP_MAX_CONNECTIONS:64}
