feat: 增强文件上传下载功能与安全性
- 在JWT配置中提供强随机默认密钥并添加校验逻辑
- 实现客户端文件下载和删除功能
- 添加文件路径规范化处理防止路径遍历
- 增强文件上传大小校验和文件名清理
- 为S3直传添加Apache HTTP Client依赖
- 改进服务器URL配置校验

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -73,6 +73,12 @@
             <artifactId>s3</artifactId>
             <version>${aws-sdk.version}</version>
         </dependency>
+        <!-- AWS SDK Apache HTTP Client (S3Config 需要) -->
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>apache-client</artifactId>
+            <version>${aws-sdk.version}</version>
+        </dependency>
 
         <!-- JWT -->
         <dependency>
