--- a/client/pom.xml
+++ b/client/pom.xml
@@ -20,6 +20,7 @@
         <jackson.version>2.15.2</jackson.version>
         <slf4j.version>2.0.7</slf4j.version>
         <spring-boot.version>3.1.5</spring-boot.version>
+        <aws-sdk.version>2.20.26</aws-sdk.version>
     </properties>
 
     <!-- 依赖版本管理（统一控制版本） -->
@@ -29,6 +30,13 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
                 <version>${spring-boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>software.amazon.awssdk</groupId>
+                <artifactId>bom</artifactId>
+                <version>${aws-sdk.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -111,21 +119,31 @@
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>s3</artifactId>
-            <version>2.20.26</version>
         </dependency>
 
         <!-- AWS SDK Apache HTTP Client -->
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>apache-client</artifactId>
-            <version>2.20.26</version>
         </dependency>
         
         <!-- AWS SDK for STS (用于身份认证) -->
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>sts</artifactId>
-            <version>2.20.26</version>
+        </dependency>
+        
+        <!-- AWS SDK for Auth -->
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>auth</artifactId>
+        </dependency>
+        
+        <!-- Jakarta Annotations API (包含 PostConstruct 等注解) -->
+        <dependency>
+            <groupId>jakarta.annotation</groupId>
+            <artifactId>jakarta.annotation-api</artifactId>
+            <version>2.1.1</version>
         </dependency>
     </dependencies>
 
