--- a/client/src/main/resources/application.yml
+++ b/client/src/main/resources/application.yml
@@ -1,17 +1,17 @@
 client:
   # 服务端 URL 与同步目录
-  serverUrl: ${CLIENT_SERVER_URL:http://localhost:8080}
+  serverUrl: ${CLIENT_SERVER_URL:http://ec2-54-95-61-230.ap-northeast-1.compute.amazonaws.com:8080}
   syncDir: ${CLIENT_SYNC_DIR:./local}
   compressStrategy: ${CLIENT_COMPRESS_STRATEGY:zip}
   enableAutoSync: ${CLIENT_ENABLE_AUTO_SYNC:true}
   enableS3DirectUpload: ${CLIENT_ENABLE_S3_DIRECT_UPLOAD:false}
-  email: ${CLIENT_EMAIL:} # 改成自己的
-  password: ${CLIENT_PASSWORD:} # 改成自己的
+  email: ${CLIENT_EMAIL:2120320012@qq.com} # 改成自己的
+  password: ${CLIENT_PASSWORD:123456} # 改成自己的
   
   # S3 配置
-  s3Bucket: ${S3_BUCKET:clouddisk}
-  s3Region: ${S3_REGION:us-east-1}
-  s3Endpoint: ${S3_ENDPOINT:http://localhost:9000}
+  s3Bucket: ${S3_BUCKET:ecnu-cloudsys}
+  s3Region: ${S3_REGION:ap-east-1}
+  s3Endpoint: ${S3_ENDPOINT:https://s3.ap-east-1.amazonaws.com}
   s3PathStyle: ${S3_PATH_STYLE:true}
   s3PartSizeMb: ${S3_PART_SIZE_MB:5}
   s3MaxRetries: ${S3_MAX_RETRIES:3}
