--- a/server/src/main/resources/application-dev.yml
+++ b/server/src/main/resources/application-dev.yml
@@ -24,6 +24,11 @@ spring:
 server:
   address: 127.0.0.1
 
+app:
+  cors:
+    allowed-origins: "*"
+    allow-credentials: false
+
 # 日志配置（开发环境）
 logging:
   file:
