--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -7,13 +7,19 @@ server:
 spring:
   application:
     name: clouddisk-server
-  profiles:
-    active: dev
-  config:
-    import:
-      - optional:application-dev.yml
-      - optional:application-prod.yml
-
+  datasource:
+    url: jdbc:postgresql://localhost:5432/clouddisk
+    username: clouddisk
+    password: 123456
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
   servlet:
     multipart:
       max-file-size: 100MB
