--- a/client/pom.xml
+++ b/client/pom.xml
@@ -20,7 +20,7 @@
         <jackson.version>2.15.2</jackson.version>
         <slf4j.version>2.0.7</slf4j.version>
         <spring-boot.version>3.1.5</spring-boot.version>
-        <aws-sdk.version>2.20.26</aws-sdk.version>
+        <aws-sdk.version>2.29.52</aws-sdk.version>
     </properties>
 
     <!-- 依赖版本管理（统一控制版本） -->
@@ -114,7 +114,12 @@
             <version>5.10.0</version>
             <scope>test</scope>
         </dependency>
-        
+
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>sdk-core</artifactId>
+        </dependency>
+
         <!-- AWS SDK for S3 -->
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
