--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -54,8 +54,13 @@ aws:
     connection-timeout-ms: ${AWS_HTTP_CONNECTION_TIMEOUT_MS:10000}
     read-timeout-ms: ${AWS_HTTP_READ_TIMEOUT_MS:60000}
 
-# 日志配置（通用）
+# 日志配置(通用)
 logging:
+  level:
+    root: INFO
+    com.clouddisk: DEBUG
+    com.clouddisk.storage: DEBUG
+    software.amazon.awssdk: DEBUG
   pattern:
     console: "%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n"
     file: "%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n"
