--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -8,17 +8,26 @@ spring:
   application:
     name: clouddisk-server
   datasource:
-    url: jdbc:postgresql://localhost:5432/clouddisk
-    username: clouddisk
-    password: 123456
-    driver-class-name: org.postgresql.Driver
+    # 本地开发使用H2内存数据库（无需安装PostgreSQL）
+    url: jdbc:h2:mem:testdb
+    driver-class-name: org.h2.Driver
+    username: sa
+    password: 
+    # 生产环境使用PostgreSQL（取消注释下面配置，注释掉上面的H2配置）
+    # url: jdbc:postgresql://localhost:5432/clouddisk
+    # username: clouddisk
+    # password: 123456
+    # driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop  # H2使用create-drop，PostgreSQL使用update
     show-sql: true
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
+        # H2数据库方言
+        dialect: org.hibernate.dialect.H2Dialect
+        # PostgreSQL数据库方言（生产环境使用）
+        # dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
   servlet:
     multipart:
