--- a/client/src/main/resources/application.yml
+++ b/client/src/main/resources/application.yml
@@ -4,7 +4,7 @@ client:
   syncDir: ${CLIENT_SYNC_DIR:./local}
   compressStrategy: ${CLIENT_COMPRESS_STRATEGY:zip}
   enableAutoSync: ${CLIENT_ENABLE_AUTO_SYNC:true}
-  enableS3DirectUpload: ${CLIENT_ENABLE_S3_DIRECT_UPLOAD:false}
+  enableS3DirectUpload: ${CLIENT_ENABLE_S3_DIRECT_UPLOAD:true}  # 设为false通过后端API上传，true直接上传S3
   email: ${CLIENT_EMAIL:2079685390@qq.com} # 改成自己的
   password: ${CLIENT_PASSWORD:kobebryant24} # 改成自己的
   
